prost-unwrap-proto-tests/tests/ui/with_this_mod_empty.stderr
error: Parameter must have 1 argument
  --> tests/ui/with_this_mod_empty.rs:11:6
   |
11 |     .with_this_mod()
   |      ^^^^^^^^^^^^^
